content/documentation/mocha/4.1.3/UserGuide/en_US/17_preferences.adoc

== Preferences


=== Preferences location

Preferences are accessed through File | Preferences on Windows or Linux and Application Menu | Preferences on OS X.


=== Output Settings 

*File Storage*
 
The Output Directory settings specify the default location of the directory in which the project file and rendered clips are stored. There is a choice between:

Relative Path: The project directory is a subdirectory of the directory containing the original project clip. By default, the subdirectory is Results. If you often load your project clip over a network, it would be best not to choose Relative Path, because the performance of project and clip I/O will not be as fast as the local disk.

Absolute Path: The project directory as an absolute path. For the best performance choose a folder on a fast disk, with plenty of disk space available.

*Disk Space Available*
 
If Absolute Path is specified, the available space in the given disk drive.

*Cache Directory*
 
Specify here the folder to use for caching image data and storing auto-saved project files. For the best performance, choose a folder on a fast disk with plenty of disk space available. A lot of data is written out in the background while you work, approximately three times as much disk space as the taken up by the original clip will be used.

The Cache Original Clip box is selected by default. This will cache the original clip to the File Cache when a project is created or opened for a more efficient playback and workflow. It is only necessary to check this if you are getting footage from a slow network.


=== System 

==== Application

*Enable Autosave*
 
The Enable box is selected by default. This will automatically save the project you are working on. Set the interval between saves by increasing or decreasing the value in the Interval (minutes) box. The default is 5 minutes. If Save Images Every Frame is checked, rendered frames are saved to disk as soon as they are created in memory; otherwise the render to disk only occurs when rendering a sequence of frames.

*Undo History Size*
 
The Maximum Size of the history is the number of user interactions stored in the undo/redo command list. The limit is used to conserve memory.

*Track in mocha AE*
Check the box if you want to open mocha Pro or mocha Plus via the "Track in mocha AE" option inside After Effects, rather than loading the bundled mocha AE.

==== UI Look and Feel

*Number of Shown Layouts*
Set how many layouts you want to appear in the View menu.  The default is 3.

*Field Controls*

You can set either:

* Rotation Controls: Adjusts the value in the field by moving the mouse in a circular motion.  The larger the circle motion, the more refined the adjustment.
* Linear Controls: Drag left or right in the field to adjust the value.

*Invert Mouse Wheel*

Inverts the motion of when scrolling in a field increases the value or decreases it.

==== Layer Settings*

*Default Colors*

Defines the default colors for Splines, Mattes and Points

*Default Opacity*

Defines the default opacity for mattes

*X-Spline Default Weight*

Sets the default weight of the x-spline control points

*Default Bezier Length*

Sets the default normalized length of the bezier tangent handles.

=== OpenGL

*Display*

Amount of Texture RAM to Reserve to the amount of memory that you want to be reserved for textures. This determines how many frames can be played back in real-time. A reasonable setting would be 3⁄4 of your graphics card&rsquo;s memory.
Textured rendering may not be compatible with Microsoft Windows Remote Desktop Connection.

*Stereo*

Here you can enable Active Stereo viewing mode if it is available to you.

*Matte Rendering*

By default, mocha will generate matte clips and track mattes by rendering with OpenGL to an offscreen buffer. If *Disable Offscreen Buffers* is checked, mocha will fall back to a software-based matte rendering implementation which is slower and produces lower-quality results, but will work on all hardware.

Most users should not need to use this option.

=== Software Update

Settings to check for software updates.

=== Clip

If you are working on a number of shots that share the same clip attributes (the same video standard, frame rate and color space), it can be useful to set a default clip setting. Then you will not have to re-enter the same clip information each time you load a clip.

==== Defaults

*FPS*

Sets the default frame rate.

*Custom PAR*

Sets the default Custom option in Pixel Aspect Ratio

*Frame Offset controls*

Options to set you default timeline as frames or timecode, and set a fixed frame offset.

==== Format
  
*Colorspace*
 
Select Linear if your source clip is stored in linear color space, possibly with gamma applied. Select Log if your source clip is stored in log color space. Select Panalog if your clips originate from a Panavision Genesis camera, and are stored in the native Panalog format.

*Convert to Float*
 
Convert to Float causes imported clips to be generated internally as 32-bit float, increasing the precision of compositing operations but using more memory.

*Format for result Clips*

What to set you rendering result output to. Currently the choice is between DPX and TIFF.


==== Interlacing
 
Select the Separate Fields button if you normally use field-based clips. This will usually consist of a video clip with options for PAL (upper field first, also used for SECAM) or NTSC (lower field first) field ordering. Separate Fields will de-interlace the clip and display both fields. When a clip is rendered, the fields will automatically be interlaced back together again. There is also a 3:2 Pulldown option if you mainly work with 3:2 pulldown material.


==== Mask

Sets the default clip mask.  

=== Lens

*Camera Model*

Sets the default distortion mode.

*Principal Point*

Sets the default center point.

*Distortion*

Sets the default distortion


=== Log

*Enable Error Logging*
 
This is selected by default. The file generated is useful for Imagineer engineers to diagnose error messages and fix any problems. You can view the log by selecting View Log from the Help menu. You can also change the location of the Log File from its default.

*Error Detection*
 
This is set to Comprehensive by default. If you are working on a labor-intensive project, you can switch to Normal only logs errors as they occur, rather than constantly checking. This provides less information in the event of an error, but can marginally improve performance.


=== Key Shortcuts

See the chapter on *Keyboard Shortcuts *for more information.

